--- a/style.css
+++ b/style.css
@@ -200,10 +200,30 @@
     width: 80%;
     margin: 5vh 0 0 10vw;
   }
+  * body .container #about_section_id .about_section_class .about_section_content .about_tasks {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 2vh;
+  }
   * body .container #about_section_id .about_section_class .about_section_content #about_page_logo {
-    width: 22vw;
-    height: 22vw;
+    width: 25vw;
+    height: 25vw;
     margin: 0 0 -3vh 0;
+  }
+  * body .container #about_section_id .about_section_class .about_section_content .passion_block {
+    text-align: center;
+    width: 90%;
+    border: 3px solid #146166;
+    border-radius: 5px;
+    padding: 1vh 3vw;
+    font-weight: bold;
+  }
+  * body .container #about_section_id .about_section_class .about_section_content .passion_things {
+    display: flex;
+    flex-direction: column;
+    gap: 2vh;
+    margin: 2vh 0 0 0;
   }
   * body .container #about_section_id .about_section_class .about_section_content .resume_button_div {
     display: flex;
@@ -579,13 +599,12 @@
   }
   * body .container #experience_section_id .experience_section_class .experience_section_squares .experience_box .courdevs_content .courdevelops_description .main_description .company_name {
     color: white;
-    font-size: 4.5vw;
+    font-size: 4vw;
     font-family: "Inter", sans-serif;
-    font-weight: bold;
   }
   * body .container #experience_section_id .experience_section_class .experience_section_squares .experience_box .courdevs_content .courdevelops_description .main_description p {
     color: #00C6C3;
-    font-size: 4vw;
+    font-size: 3.5vw;
   }
   * body .container #experience_section_id .experience_section_class .experience_section_squares .experience_box .courdevs_content .courdevelops_description .main_description.dissapear {
     transition: 0.7s all ease-out;
@@ -639,13 +658,12 @@
   }
   * body .container #experience_section_id .experience_section_class .experience_section_squares .experience_box .slea_content .slea_description .main_description_slea .company_name {
     color: white;
-    font-size: 4.5vw;
+    font-size: 4vw;
     font-family: "Inter", sans-serif;
-    font-weight: bold;
   }
   * body .container #experience_section_id .experience_section_class .experience_section_squares .experience_box .slea_content .slea_description .main_description_slea p {
     color: #00C6C3;
-    font-size: 4vw;
+    font-size: 3.5vw;
   }
   * body .container #experience_section_id .experience_section_class .experience_section_squares .experience_box .slea_content .slea_description .main_description_slea.dissapear {
     transition: 0.7s all ease-out;
@@ -699,13 +717,12 @@
   }
   * body .container #experience_section_id .experience_section_class .experience_section_squares .experience_box .r1rcm_content .r1rcm_description .main_description_r1rcm .company_name {
     color: white;
-    font-size: 4.5vw;
+    font-size: 4vw;
     font-family: "Inter", sans-serif;
-    font-weight: bold;
   }
   * body .container #experience_section_id .experience_section_class .experience_section_squares .experience_box .r1rcm_content .r1rcm_description .main_description_r1rcm p {
     color: #00C6C3;
-    font-size: 4vw;
+    font-size: 3.5vw;
   }
   * body .container #experience_section_id .experience_section_class .experience_section_squares .experience_box .r1rcm_content .r1rcm_description .main_description_r1rcm.dissapear {
     transition: 0.7s all ease-out;
@@ -851,7 +868,7 @@
   }
   * body .container #contact_section_id .contact_section_class .contact_section_form form .input_div textarea {
     background-color: #36395D;
-    height: 20vh;
+    height: 30vh;
     width: 78vw;
     border: none;
     border-radius: 5px;
@@ -1527,7 +1544,6 @@
   * body .container #experience_section_id .experience_section_class .experience_section_squares .experience_box .courdevs_content .courdevelops_description .main_description p {
     color: #00C6C3;
     font-size: 2vw;
-    font-weight: bold;
   }
   * body .container #experience_section_id .experience_section_class .experience_section_squares .experience_box .courdevs_content .courdevelops_description .main_description.dissapear {
     transition: 0.7s all ease-out;
@@ -1589,7 +1605,6 @@
   * body .container #experience_section_id .experience_section_class .experience_section_squares .experience_box .slea_content .slea_description .main_description_slea p {
     color: #00C6C3;
     font-size: 2vw;
-    font-weight: bold;
   }
   * body .container #experience_section_id .experience_section_class .experience_section_squares .experience_box .slea_content .slea_description .main_description_slea.dissapear {
     transition: 0.7s all ease-out;
@@ -1634,7 +1649,7 @@
     height: 8vw;
   }
   * body .container #experience_section_id .experience_section_class .experience_section_squares .experience_box .r1rcm_content .r1rcm_description {
-    margin: 13vh 0 0 6.5vw;
+    margin: 9vh 0 0 6.5vw;
   }
   * body .container #experience_section_id .experience_section_class .experience_section_squares .experience_box .r1rcm_content .r1rcm_description .main_description_r1rcm {
     transition: 0.9s all ease-in;
@@ -1649,7 +1664,6 @@
   * body .container #experience_section_id .experience_section_class .experience_section_squares .experience_box .r1rcm_content .r1rcm_description .main_description_r1rcm p {
     color: #00C6C3;
     font-size: 2vw;
-    font-weight: bold;
   }
   * body .container #experience_section_id .experience_section_class .experience_section_squares .experience_box .r1rcm_content .r1rcm_description .main_description_r1rcm.dissapear {
     transition: 0.7s all ease-out;
@@ -1792,7 +1806,7 @@
   }
   * body .container #contact_section_id .contact_section_class .contact_section_form form .input_div textarea {
     background-color: #36395D;
-    height: 55vh;
+    height: 65vh;
     width: 78vw;
     border: none;
     border-radius: 5px;
@@ -1814,6 +1828,7 @@
   * body .container #contact_section_id .contact_section_class .contact_section_form form .submit_button #submitemail p {
     color: white;
     font-size: 1.5em;
+    font-size: 2vw;
   }
   * body .container #contact_section_id .contact_section_class .contact_section_form form .poweredby small .tabletsocials {
     margin: 1vh 0 0 0vw;
