--- a/style.scss
+++ b/style.scss
@@ -2091,5 +2091,94 @@ $firstblue: #58a6ff;
     }
 }
 // TABLET
+@media only screen and (min-width: 768px) and (orientation: portrait) {
+    // All you need to do is just make the adjustments
+    * {
+        body {
+            .container {
+                .nav_section {
+                    .the_navbar {
+                        // the hamburger
+                        .hamburgermobile {
+                            // background-color: yellow;
+                            #top_hamburger {
+                                width: 10vw;
+                                height: 10vw;
+                            }
+                        }
+                    }
+                }
+                // HOME SECTION (PORTRAIT)
+                #home_section_id {
+                    .home_section_class {
+                        .home_section_content {
+                            .back_head_shot {
+                                width: 45vw;
+                                height: 45vw;
+                                .head_shot {
+                                    width: 41vw;
+                                    height: 41vw;
+                                    #headshot {
+                                        width: 38vw;
+                                        height: 38vw;
+                                    }
+                                }
+                            }
+                            .home_section_words {
+                                .name_and_description {
+                                    .home_name {
+                                        font-size: 6vw;
+                                    }
+                                    .home_description {
+                                        font-size: 3.5vw;
+                                        width: 50vw;
+                                        height: 2vw;
+                                        border-radius: 10px;
+                                    }
+                                }
+                                .home_slogan {
+                                    font-size: 3vw;
+                                }
+                                .learn_more {
+                                    box-shadow: 2px 2px 2px 4px $boxshadowcircles;
+                                    border-radius: 10px;
+                                    width: 55vw;
+                                    height: 2vw;
+                                    a {
+                                        font-size: 3vw;
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+                // ABOUT SECTION (PORTRAIT)
+                #about_section_id {
+                    .about_section_class {
+                        height: 100vh;
+                        .section_title {
+                            
+                        }
+                        .about_section_content {
+                            // background-color: yellow;
+                            .first_para_about {
+                                font-size: 3vw;
+                            }
+                            #about_page_logo {
+                                width: 25vw;
+                                height: 25vw;
+                            }
+                            .resume_button_div {
+                                a {
+                                    font-size: 3vw;
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
 
 // DESKTOP
