--- a/style.css
+++ b/style.css
@@ -1879,6 +1879,15 @@
   }
 }
 @media only screen and (min-width: 768px) and (orientation: portrait) {
+  * body .container .nav_section .the_navbar .you #name {
+    font-size: 4vw;
+  }
+  * body .container .nav_section .the_navbar .you #job_description {
+    font-size: 3vw;
+  }
+  * body .container .nav_section .the_navbar .hamburgermobile {
+    margin: 0 0 0 8vw;
+  }
   * body .container .nav_section .the_navbar .hamburgermobile #top_hamburger {
     width: 10vw;
     height: 10vw;
@@ -1896,37 +1905,282 @@
     height: 38vw;
   }
   * body .container #home_section_id .home_section_class .home_section_content .home_section_words .name_and_description .home_name {
-    font-size: 6vw;
+    font-size: 6.5vw;
   }
   * body .container #home_section_id .home_section_class .home_section_content .home_section_words .name_and_description .home_description {
-    font-size: 3.5vw;
+    font-size: 4vw;
     width: 50vw;
     height: 2vw;
     border-radius: 10px;
   }
   * body .container #home_section_id .home_section_class .home_section_content .home_section_words .home_slogan {
-    font-size: 3vw;
+    font-size: 3.5vw;
   }
   * body .container #home_section_id .home_section_class .home_section_content .home_section_words .learn_more {
-    box-shadow: 2px 2px 2px 4px rgba(0, 0, 0, 0.521);
     border-radius: 10px;
-    width: 55vw;
+    width: 68vw;
     height: 2vw;
+    box-shadow: none;
   }
   * body .container #home_section_id .home_section_class .home_section_content .home_section_words .learn_more a {
-    font-size: 3vw;
+    font-size: 3.5vw;
   }
   * body .container #about_section_id .about_section_class {
-    height: 100vh;
+    height: 125vh;
+  }
+  * body .container #about_section_id .about_section_class .section_title {
+    font-size: 8vw;
   }
   * body .container #about_section_id .about_section_class .about_section_content .first_para_about {
-    font-size: 3vw;
+    font-size: 4vw;
+    margin: 3vh 0 3vh 0;
   }
   * body .container #about_section_id .about_section_class .about_section_content #about_page_logo {
-    width: 25vw;
-    height: 25vw;
+    width: 22vw;
+    height: 22vw;
+    margin: 3vh 0 3vh 0;
+  }
+  * body .container #about_section_id .about_section_class .about_section_content .resume_button_div {
+    border-radius: 10px;
+    width: 68vw;
+    height: 2vw;
+    box-shadow: none;
+    margin: 3vh 0 0 0;
   }
   * body .container #about_section_id .about_section_class .about_section_content .resume_button_div a {
+    font-size: 3vw;
+  }
+  * body .container #portfolio_section_id .portfolio_section_class {
+    height: 105vh;
+  }
+  * body .container #portfolio_section_id .portfolio_section_class .section_title {
+    font-size: 8vw;
+  }
+  * body .container #portfolio_section_id .portfolio_section_class .portfolio_section_content .portfolio_squares {
+    margin: -10vh 1vh 0 0;
+  }
+  * body .container #portfolio_section_id .portfolio_section_class .portfolio_section_content .portfolio_squares .portfolio_square {
+    border-radius: 5px;
+    width: 78vw;
+    height: 18vw;
+  }
+  * body .container #portfolio_section_id .portfolio_section_class .portfolio_section_content .portfolio_squares .portfolio_square .app #skill_project {
+    width: 50vw;
+    margin: 0 1vw 0 0;
+  }
+  * body .container #portfolio_section_id .portfolio_section_class .portfolio_section_content .portfolio_squares .portfolio_square .app #create_collab {
+    margin: 0 0 0 3vw;
+    width: 38vw;
+    height: 4vh;
+  }
+  * body .container #portfolio_section_id .portfolio_section_class .portfolio_section_content .portfolio_squares .portfolio_square .app #msy {
+    width: 42vw;
+    height: 10vh;
+  }
+  * body .container #portfolio_section_id .portfolio_section_class .portfolio_section_content .portfolio_squares .portfolio_square .app #workflow_app {
+    width: 40vw;
+    height: 7vh;
+  }
+  * body .container #portfolio_section_id .portfolio_section_class .portfolio_section_content .portfolio_squares .portfolio_square .app #mps_site {
+    width: 20vw;
+    height: 5vh;
+  }
+  * body .container #skills_section_id .skills_section_class {
+    height: 120vh;
+  }
+  * body .container #skills_section_id .skills_section_class .skills_title {
+    font-size: 8vw;
+  }
+  * body .container #skills_section_id .skills_section_class .skills_circles_section .skills_one_landscape .skills_circles_one .skill_circle .skill_back {
+    width: 23vw;
+    height: 23vw;
+  }
+  * body .container #skills_section_id .skills_section_class .skills_circles_section .skills_one_landscape .skills_circles_one .skill_circle .skill_back .skill_front {
+    width: 21vw;
+    height: 21vw;
+  }
+  * body .container #skills_section_id .skills_section_class .skills_circles_section .skills_one_landscape .skills_circles_one .skill_circle .skill_back .skill_front .shield {
+    width: 10vw;
+    height: 10vw;
+  }
+  * body .container #skills_section_id .skills_section_class .skills_circles_section .skills_one_landscape .skills_circles_one .skill_circle .skill_back .skill_front #sass {
+    width: 10.5vw;
+    height: 10.5vw;
+  }
+  * body .container #skills_section_id .skills_section_class .skills_circles_section .skills_one_landscape .skills_circles_one .skill_circle .skill_back .skill_front #javascript {
+    width: 12.5vw;
+    height: 12.5vw;
+  }
+  * body .container #skills_section_id .skills_section_class .skills_circles_section .skills_one_landscape .skills_circles_one .skill_circle .skill_back .skill_front #python {
+    width: 9.5vw;
+    height: 9.5vw;
+  }
+  * body .container #skills_section_id .skills_section_class .skills_circles_section .skills_one_landscape .skills_circles_one .skill_circle .skill_back .skill_front #react {
+    width: 11vw;
+    height: 11vw;
+  }
+  * body .container #skills_section_id .skills_section_class .skills_circles_section .skills_two_landscape .skills_circles_one .skill_circle .skill_back {
+    width: 23vw;
+    height: 23vw;
+  }
+  * body .container #skills_section_id .skills_section_class .skills_circles_section .skills_two_landscape .skills_circles_one .skill_circle .skill_back .skill_front {
+    width: 21vw;
+    height: 21vw;
+  }
+  * body .container #skills_section_id .skills_section_class .skills_circles_section .skills_two_landscape .skills_circles_one .skill_circle .skill_back .skill_front #figma {
+    width: 12vw;
+    height: 10vw;
+  }
+  * body .container #skills_section_id .skills_section_class .skills_circles_section .skills_two_landscape .skills_circles_one .skill_circle .skill_back .skill_front #firebase {
+    width: 7.5vw;
+    height: 9vw;
+  }
+  * body .container #skills_section_id .skills_section_class .skills_circles_section .skills_two_landscape .skills_circles_one .skill_circle .skill_back .skill_front #mongo {
+    width: 5vw;
+    height: 10vw;
+  }
+  * body .container #skills_section_id .skills_section_class .skills_circles_section .skills_two_landscape .skills_circles_one .skill_circle .skill_back .skill_front #django {
+    width: 10vw;
+    height: 9vw;
+  }
+  * body .container #skills_section_id .skills_section_class .skills_circles_section .skills_two_landscape .skills_circles_one .skill_circle .skill_back .skill_front #aws {
+    width: 11vw;
+    height: 11vw;
+  }
+  * body .container #skills_section_id .skills_section_class .skills_circles_section .skills_two_landscape .skills_circles_one .skill_circle .skill_back .skill_front #heroku {
+    width: 11vw;
+    height: 11vw;
+  }
+  * body .container #experience_section_id .experience_section_class .section_title {
+    font-size: 8vw;
+  }
+  * body .container #experience_section_id .experience_section_class .experience_section_squares .experience_box {
+    width: 78vw;
+    height: 30vw;
+  }
+  * body .container #experience_section_id .experience_section_class .experience_section_squares .experience_box .courdevs_content .courdevelops_logo #courdevelops {
+    width: 18vw;
+    height: 18vw;
+  }
+  * body .container #experience_section_id .experience_section_class .experience_section_squares .experience_box .courdevs_content .courdevelops_description .main_description .company_name {
+    font-size: 3.5vw;
+  }
+  * body .container #experience_section_id .experience_section_class .experience_section_squares .experience_box .courdevs_content .courdevelops_description .main_description p {
+    font-size: 3vw;
+  }
+  * body .container #experience_section_id .experience_section_class .experience_section_squares .experience_box .slea_content .slea_logo #slea {
+    width: 16vw;
+    height: 16vw;
+  }
+  * body .container #experience_section_id .experience_section_class .experience_section_squares .experience_box .slea_content .slea_description .main_description_slea .company_name {
+    font-size: 3.5vw;
+  }
+  * body .container #experience_section_id .experience_section_class .experience_section_squares .experience_box .slea_content .slea_description .main_description_slea p {
+    font-size: 3vw;
+  }
+  * body .container #experience_section_id .experience_section_class .experience_section_squares .experience_box .r1rcm_content .r1rcm_logo #r1rcm {
+    width: 15vw;
+    height: 12vw;
+  }
+  * body .container #experience_section_id .experience_section_class .experience_section_squares .experience_box .r1rcm_content .r1rcm_description .main_description_r1rcm .company_name {
+    font-size: 3.5vw;
+  }
+  * body .container #experience_section_id .experience_section_class .experience_section_squares .experience_box .r1rcm_content .r1rcm_description .main_description_r1rcm p {
+    font-size: 3vw;
+  }
+  * body .container #blog_section_id .blog_section_class .section_title {
+    font-size: 8vw;
+  }
+  * body .container #blog_section_id .blog_section_class .blog_circles {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 5vh;
+    margin-top: 2.5vh;
+  }
+  * body .container #blog_section_id .blog_section_class .blog_circles .blog_button {
+    width: 80vw;
+    height: 30vw;
+  }
+  * body .container #blog_section_id .blog_section_class .blog_circles .blog_button .blog_circle {
+    z-index: 1;
+  }
+  * body .container #blog_section_id .blog_section_class .blog_circles .blog_button .blog_circle .back_blog {
+    width: 32vw;
+    height: 32vw;
+  }
+  * body .container #blog_section_id .blog_section_class .blog_circles .blog_button .blog_circle .back_blog .front_blog {
+    width: 27vw;
+    height: 27vw;
+    font-size: 3vw;
+  }
+  * body .container #blog_section_id .blog_section_class .blog_circles .blog_button .tag_one {
+    width: 58vw;
+    height: 20vw;
+  }
+  * body .container #blog_section_id .blog_section_class .blog_circles .blog_button .tag_one p {
+    font-size: 3vw;
+  }
+  * body .container #contact_section_id .contact_section_class {
+    height: 110vh;
+  }
+  * body .container #contact_section_id .contact_section_class .section_title {
+    font-size: 8vw;
+  }
+  * body .container #contact_section_id .contact_section_class .contact_section_form form .input_div label {
+    font-size: 4vw;
+  }
+  * body .container #contact_section_id .contact_section_class .contact_section_form form .input_div input {
+    width: 76vw;
+    height: 8vw;
+  }
+  * body .container #contact_section_id .contact_section_class .contact_section_form form .input_div textarea {
+    width: 76vw;
+    height: 30vh;
+  }
+  * body .container #contact_section_id .contact_section_class .contact_section_form form .submit_button #submitemail {
+    width: 76vw;
+    height: 8vw;
+  }
+  * body .container #contact_section_id .contact_section_class .contact_section_form form .submit_button #submitemail p {
+    font-size: 3vw;
+  }
+  * body .container #contact_section_id .contact_section_class .contact_section_form form .poweredby small .tabletsocials {
+    margin: 1vh 0 0 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 17vw;
+  }
+  * body .container #contact_section_id .contact_section_class .contact_section_form form .poweredby small .tabletsocials #github {
+    width: 6vw;
+    height: 6vw;
+  }
+  * body .container #contact_section_id .contact_section_class .contact_section_form form .poweredby small .tabletsocials #linkedin {
+    width: 6vw;
+    height: 7vw;
+  }
+  * body .container #contact_section_id .contact_section_class .contact_section_form form .poweredby small .tabletsocials #twitter {
+    width: 5vw;
+    height: 5vw;
+  }
+  * body .container #contact_section_id .contact_section_class .contact_section_form form .poweredby small .tabletsocials #instagram {
+    width: 6vw;
+    height: 6.5vw;
+  }
+  * body .container #contact_section_id .contact_section_class .contact_section_form form .poweredby .copyrights {
+    margin: 7vh 0 0 0;
+  }
+  * body .container #contact_section_id .contact_section_class .contact_section_form form .poweredby .copyrights #copyright_coudevs {
+    width: 7vw;
+    height: 7vw;
+  }
+  * body .container #contact_section_id .contact_section_class .contact_section_form form .poweredby .copyrights p {
+    margin: 0.8vh 0 0 0;
+    font-size: 3vw;
+  }
+  * body .container #contact_section_id .contact_section_class .contact_section_form form .poweredby .copyrights .courdev {
     font-size: 3vw;
   }
 }/*# sourceMappingURL=style.css.map */
