--- a/style.scss
+++ b/style.scss
@@ -210,7 +210,7 @@ $firstblue: #58a6ff;
                                     width: 63vw;
                                     height: 2vw;
                                     padding: 4vw;
-                                    box-shadow: 2px 2px 2px 2px $boxshadowcircles;
+                                    // box-shadow: 2px 2px 2px 2px $boxshadowcircles;
                                     margin: 5vh 0 0 0;
                                     a {
                                         color: white;
@@ -292,7 +292,7 @@ $firstblue: #58a6ff;
                                 padding: 4vw 4vh;
                                 margin: 2vh 0 0 0;
                                 border-radius: 5px;
-                                box-shadow: 2px 2px 2px 2px $boxshadowcircles;
+                                // box-shadow: 2px 2px 2px 2px $boxshadowcircles;
                                 a {
                                     color: white;
                                     text-decoration: none;
