--- a/style.css
+++ b/style.css
@@ -2181,4 +2181,52 @@
   * body .container #contact_section_id .contact_section_class .contact_section_form form .poweredby .copyrights .courdev {
     font-size: 3vw;
   }
+}
+@media only screen and (min-width: 768px) and (orientation: landscape) {
+  * body .container .nav_section .the_navbar .you #name {
+    font-size: 4vw;
+  }
+  * body .container .nav_section .the_navbar .you #job_description {
+    font-size: 3vw;
+  }
+  * body .container .nav_section .the_navbar .hamburgermobile {
+    margin: 0 0 0 8vw;
+  }
+  * body .container .nav_section .the_navbar .hamburgermobile #top_hamburger {
+    width: 10vw;
+    height: 10vw;
+  }
+  * body .container #home_section_id .home_section_class .home_section_content .back_head_shot {
+    width: 45vw;
+    height: 45vw;
+  }
+  * body .container #home_section_id .home_section_class .home_section_content .back_head_shot .head_shot {
+    width: 41vw;
+    height: 41vw;
+  }
+  * body .container #home_section_id .home_section_class .home_section_content .back_head_shot .head_shot #headshot {
+    width: 38vw;
+    height: 38vw;
+  }
+  * body .container #home_section_id .home_section_class .home_section_content .home_section_words .name_and_description .home_name {
+    font-size: 6.5vw;
+  }
+  * body .container #home_section_id .home_section_class .home_section_content .home_section_words .name_and_description .home_description {
+    font-size: 4vw;
+    width: 50vw;
+    height: 2vw;
+    border-radius: 10px;
+  }
+  * body .container #home_section_id .home_section_class .home_section_content .home_section_words .home_slogan {
+    font-size: 3.5vw;
+  }
+  * body .container #home_section_id .home_section_class .home_section_content .home_section_words .learn_more {
+    border-radius: 10px;
+    width: 68vw;
+    height: 2vw;
+    box-shadow: none;
+  }
+  * body .container #home_section_id .home_section_class .home_section_content .home_section_words .learn_more a {
+    font-size: 3.5vw;
+  }
 }/*# sourceMappingURL=style.css.map */
