--- a/style.scss
+++ b/style.scss
@@ -2511,5 +2511,81 @@ $firstblue: #58a6ff;
         }
     }
 }
+// TABLET (LANDSCAPE)
+@media only screen and (min-width: 768px) and (orientation: landscape) {
+    // All you need to do is just make the adjustments
+    * {
+        body {
+            .container {
+                .nav_section {
+                    .the_navbar {
+                        .you {
+                            #name {
+                                font-size: 4vw;
+                            }
+                            #job_description {
+                                font-size: 3vw;
+                            }
+                        }
+                        // the hamburger
+                        .hamburgermobile {
+                            margin: 0 0 0 8vw;
+                            // background-color: yellow;
+                            #top_hamburger {
+                                width: 10vw;
+                                height: 10vw;
+                            }
+                        }
+                    }
+                }
+                // HOME SECTION (LANDSCAPE)
+                #home_section_id {
+                    .home_section_class {
+                        .home_section_content {
+                            .back_head_shot {
+                                width: 45vw;
+                                height: 45vw;
+                                .head_shot {
+                                    width: 41vw;
+                                    height: 41vw;
+                                    #headshot {
+                                        width: 38vw;
+                                        height: 38vw;
+                                    }
+                                }
+                            }
+                            .home_section_words {
+                                .name_and_description {
+                                    .home_name {
+                                        font-size: 6.5vw;
+                                    }
+                                    .home_description {
+                                        font-size: 4vw;
+                                        width: 50vw;
+                                        height: 2vw;
+                                        border-radius: 10px;
+                                    }
+                                }
+                                .home_slogan {
+                                    font-size: 3.5vw;
+                                }
+                                .learn_more {
+                                    // box-shadow: 2px 2px 2px 2px $boxshadowcircles;
+                                    border-radius: 10px;
+                                    width: 68vw;
+                                    height: 2vw;
+                                    box-shadow: none;
+                                    a {
+                                        font-size: 3.5vw;
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
 
 // DESKTOP
