--- a/style.css
+++ b/style.css
@@ -2183,50 +2183,87 @@
   }
 }
 @media only screen and (min-width: 768px) and (orientation: landscape) {
+  * body .container .nav_section .the_navbar {
+    height: 20vh;
+  }
   * body .container .nav_section .the_navbar .you #name {
-    font-size: 4vw;
+    font-size: 2.5vw;
   }
   * body .container .nav_section .the_navbar .you #job_description {
-    font-size: 3vw;
+    font-size: 1.5vw;
   }
   * body .container .nav_section .the_navbar .hamburgermobile {
-    margin: 0 0 0 8vw;
+    margin: 0 0 0 33vw;
   }
   * body .container .nav_section .the_navbar .hamburgermobile #top_hamburger {
-    width: 10vw;
-    height: 10vw;
+    width: 6vw;
+    height: 6vw;
+  }
+  * body .container #home_section_id .home_section_class {
+    height: 110vh;
+  }
+  * body .container #home_section_id .home_section_class .home_section_content {
+    width: 80%;
+    margin: -5vh 0 0 0;
   }
   * body .container #home_section_id .home_section_class .home_section_content .back_head_shot {
-    width: 45vw;
-    height: 45vw;
+    margin: 0 0 0 20vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 34vw;
+    height: 34vw;
   }
   * body .container #home_section_id .home_section_class .home_section_content .back_head_shot .head_shot {
-    width: 41vw;
-    height: 41vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 45vw;
+    height: 35vw;
+    border-radius: 50%;
   }
   * body .container #home_section_id .home_section_class .home_section_content .back_head_shot .head_shot #headshot {
-    width: 38vw;
-    height: 38vw;
+    width: 28vw;
+    height: 28vw;
+    border: 11px solid #080E2F;
+  }
+  * body .container #home_section_id .home_section_class .home_section_content .home_section_words {
+    margin: 0 0 0 -8vw;
   }
   * body .container #home_section_id .home_section_class .home_section_content .home_section_words .name_and_description .home_name {
-    font-size: 6.5vw;
+    font-size: 4vw;
   }
   * body .container #home_section_id .home_section_class .home_section_content .home_section_words .name_and_description .home_description {
-    font-size: 4vw;
-    width: 50vw;
-    height: 2vw;
+    margin: -3vh 0 0 0;
+    font-size: 2vw;
+    width: 40vw;
+    height: 3vw;
     border-radius: 10px;
   }
   * body .container #home_section_id .home_section_class .home_section_content .home_section_words .home_slogan {
-    font-size: 3.5vw;
+    font-size: 2vw;
   }
   * body .container #home_section_id .home_section_class .home_section_content .home_section_words .learn_more {
     border-radius: 10px;
-    width: 68vw;
-    height: 2vw;
+    width: 45vw;
+    height: 3vw;
     box-shadow: none;
   }
   * body .container #home_section_id .home_section_class .home_section_content .home_section_words .learn_more a {
-    font-size: 3.5vw;
+    font-size: 2vw;
+  }
+  * body .container #about_section_id .about_section_class {
+    height: 130vh;
+  }
+  * body .container #about_section_id .about_section_class .section_title {
+    font-size: 5vw;
+  }
+  * body .container #about_section_id .about_section_class .about_section_content .resume_button_div {
+    width: 72vw;
+    height: 2vh;
+    margin: 8vh 5vw 0 0;
+  }
+  * body .container #about_section_id .about_section_class .about_section_content .resume_button_div a {
+    font-weight: normal;
   }
 }/*# sourceMappingURL=style.css.map */
