--- a/style.scss
+++ b/style.scss
@@ -2519,21 +2519,22 @@ $firstblue: #58a6ff;
             .container {
                 .nav_section {
                     .the_navbar {
+                        height: 20vh;
                         .you {
                             #name {
-                                font-size: 4vw;
+                                font-size: 2.5vw;
                             }
                             #job_description {
-                                font-size: 3vw;
+                                font-size: 1.5vw;
                             }
                         }
                         // the hamburger
                         .hamburgermobile {
-                            margin: 0 0 0 8vw;
+                            margin: 0 0 0 33vw;
                             // background-color: yellow;
                             #top_hamburger {
-                                width: 10vw;
-                                height: 10vw;
+                                width: 6vw;
+                                height: 6vw;
                             }
                         }
                     }
@@ -2541,43 +2542,81 @@ $firstblue: #58a6ff;
                 // HOME SECTION (LANDSCAPE)
                 #home_section_id {
                     .home_section_class {
+                        height: 110vh;
                         .home_section_content {
+                            // background-color: yellow;
+                            width: 80%;
+                            margin: -5vh 0 0 0;
                             .back_head_shot {
-                                width: 45vw;
-                                height: 45vw;
+                                margin: 0 0 0 20vw;
+                                display: flex;
+                                justify-content: center;
+                                align-items: center;
+                                // background-color: #58a6ff;
+                                width: 34vw;
+                                height: 34vw;
                                 .head_shot {
-                                    width: 41vw;
-                                    height: 41vw;
+                                    display: flex;
+                                    justify-content: center;
+                                    align-items: center;
+                                    // width: 35vw;
+                                    // height: 25vw;
+                                    width: 45vw;
+                                    height: 35vw;
+                                    // background-color: #00C6C3;
+                                    border-radius: 50%;
                                     #headshot {
-                                        width: 38vw;
-                                        height: 38vw;
+                                        width: 28vw;
+                                        height: 28vw;
+                                        border: 11px solid $darkblue;
                                     }
                                 }
                             }
                             .home_section_words {
+                                margin: 0 0 0 -8vw;
                                 .name_and_description {
                                     .home_name {
-                                        font-size: 6.5vw;
+                                        font-size: 4vw;
                                     }
                                     .home_description {
-                                        font-size: 4vw;
-                                        width: 50vw;
-                                        height: 2vw;
+                                        margin: -3vh 0 0 0;
+                                        font-size: 2vw;
+                                        width: 40vw;
+                                        height: 3vw;
                                         border-radius: 10px;
                                     }
                                 }
                                 .home_slogan {
-                                    font-size: 3.5vw;
+                                    font-size: 2vw;
                                 }
                                 .learn_more {
                                     // box-shadow: 2px 2px 2px 2px $boxshadowcircles;
                                     border-radius: 10px;
-                                    width: 68vw;
-                                    height: 2vw;
+                                    width: 45vw;
+                                    height: 3vw;
                                     box-shadow: none;
                                     a {
-                                        font-size: 3.5vw;
+                                        font-size: 2vw;
                                     }
+                                }
+                            }
+                        }
+                    }
+                }
+                // ABOUT SECTION (LANDSCAPE)
+                #about_section_id {
+                    .about_section_class {
+                        height: 130vh;
+                        .section_title {
+                            font-size: 5vw;
+                        }
+                        .about_section_content {
+                            .resume_button_div {
+                                width: 72vw;
+                                height: 2vh;
+                                margin: 8vh 5vw 0 0;
+                                a {
+                                    font-weight: normal;
                                 }
                             }
                         }
